plugins {
    id 'java'
    id 'application'
}

version = '1.0-prototype'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

def javafxVersion = '21.0.2'

dependencies {
    implementation "org.openjfx:javafx-base:${javafxVersion}:win"
    implementation "org.openjfx:javafx-controls:${javafxVersion}:win"
    implementation "org.openjfx:javafx-graphics:${javafxVersion}:win"
    implementation "org.openjfx:javafx-fxml:${javafxVersion}:win"
    
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.0'
}

application {
    mainClass = 'com.floydwarshall.App'
}

run {
    mainClass = 'com.floydwarshall.App'
    jvmArgs = [
        '--module-path', configurations.runtimeClasspath.asPath,
        '--add-modules', 'javafx.controls,javafx.fxml'
    ]
}

test {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes 'Main-Class': 'com.floydwarshall.App'
    }

}
